# helloworld_django

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  init.sql  launch.sh  manage.py  pyproject.toml  railway.json
api_market/: admin.py  apps.py  filter.py  models.py  serializers.py  signals.py  urls.py  views.py
api_market/migrations/: 0001_initial.py  0002_alter_product_rating_total.py  0002_remove_question_pub_date_delete_choice.py  0003_basket_brand_category_comment_order_paymentstatus_and_more.py
basket/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
basket/migrations/: 0001_initial.py  0002_alter_basket_user.py  0003_productsinbasket_created_at_and_more.py
brand/: admin.py  models.py  serializers.py  urls.py  views.py
brand/migrations/: 0001_initial.py  0002_alter_brand_description_alter_brand_logo_url.py
category/: admin.py  models.py  prefetch.py  serializers.py  tasks.py  update_category.py  urls.py  views.py
category/migrations/: 0001_initial.py  (+1 more)
comment/: admin.py  models.py  serializers.py  urls.py  views.py
custom_auth/: admin.py  authentication.py  models.py  serializers.py  tasks.py  urls.py  views.py
demand/: admin.py  models.py  serializers.py  urls.py  views.py
favorites/: models.py  serializers.py  urls.py  views.py
news/: models.py  serializers.py  urls.py  views.py
order/: admin.py  models.py  serializers.py  urls.py  views.py
products/: admin.py  filter.py  models.py  serializers.py  tasks.py  urls.py  views.py
site_market/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+35 files in other folders)
