[tool.poetry]
name = "helloworld-django"
version = "0.1.0"
description = ""
authors = ["Mukagali <mukgaly.omirzak2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
psycopg2 = "^2.9.9"
djangorestframework = "^3.14.0"
django-mptt = "^0.15.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
